; ModuleID = '/home/carl/AnghaBench/php-src/sapi/litespeed/extr_lsapilib.c_lsapi_signal.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/litespeed/extr_lsapilib.c_lsapi_signal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sigaction = type { i64, i64, i32 }

@SIG_DFL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i64)* @lsapi_signal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lsapi_signal(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca %struct.sigaction, align 8
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @sigaction(i32 %6, %struct.sigaction* null, %struct.sigaction* %5)
  %8 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %5, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @SIG_DFL, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %20

12:                                               ; preds = %2
  %13 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %5, i32 0, i32 2
  %14 = call i32 @sigemptyset(i32* %13)
  %15 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %5, i32 0, i32 1
  store i64 0, i64* %15, align 8
  %16 = load i64, i64* %4, align 8
  %17 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %5, i32 0, i32 0
  store i64 %16, i64* %17, align 8
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @sigaction(i32 %18, %struct.sigaction* %5, %struct.sigaction* null)
  br label %20

20:                                               ; preds = %12, %2
  ret void
}

declare dso_local i32 @sigaction(i32, %struct.sigaction*, %struct.sigaction*) #1

declare dso_local i32 @sigemptyset(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
